[package]
name = "contracts-query"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
chrono = "0.4.26"
clap = { version = "4.0.29", features = ["derive"] }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive", "full", "bit-vec"] }
frame-support = "21.0.0"
futures = "0.3.13"
hex = "0.4.3"
jsonrpsee = { version = "0.18.2", features = ["ws-client"]}
pallet-contracts-primitives = "23.0.0"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
sp-core = "20.0.0"
sp-keyring = "23.0.0"
subxt = { git = "https://github.com/paritytech/subxt", branch = "master" }
impl-serde = { version = "0.4.0" }
tokio = { version = "1.8", features = ["rt-multi-thread", "macros", "time"] }

